--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -22,4 +22,4 @@ networks:
     eth_gbp_price_feed: "0x0000000000000000000000000000000000000000"
     verify: False
 
-dotenv: .env  # Include this line if you're using environment variables
+#dotenv: .env  # Include this line if you're using environment variables
