--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -2,7 +2,7 @@
 
 dependencies:
   - OpenZeppelin/openzeppelin-contracts@4.8.0
-  - smartcontractkit/chainlink-brownie-contracts@1.2.1
+  - smartcontractkit/chainlink-brownie-contracts@1.2.0
 
 compiler:
   solc:
@@ -12,7 +12,7 @@ compiler:
       runs: 200
     remappings:
       - '@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.8.0'
-      - '@chainlink=smartcontractkit/chainlink-brownie-contracts@1.2.1'
+      - '@chainlink=smartcontractkit/chainlink-brownie-contracts@1.2.0'
 
 networks:
   development:
@@ -22,4 +22,4 @@ networks:
     eth_gbp_price_feed: "0x0000000000000000000000000000000000000000"
     verify: False
 
-dotenv: .env  # Include this line if you're using environment variables
+#dotenv: .env  # Include this line if you're using environment variables
